getReservationsAtGivenDate controler